feat: 로또 리스트를 갖느 일급 콜렉션 및 생성 테스트 추가